manifests/webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-annotate-webhook
  labels:
    app: pod-annotate-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-annotate-webhook
  template:
    metadata:
      labels:
        app: pod-annotate-webhook
    spec:
      containers:
        - name: pod-annotate-webhook
          image: wcrum/webhook:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/webhook
              readOnly: true
            - name: imageswap-config
              mountPath: /etc/imageswap-config
              readOnly: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: example-com-tls
        - name: imageswap-config
          configMap:
            name: imageswap-config
---
apiVersion: v1
kind: Service
metadata:
  name: pod-annotate-webhook
  labels:
    app: pod-annotate-webhook
spec:
  ports:
  - port: 443
    targetPort: 8080
  selector:
    app: pod-annotate-webhook
