manifests/webhook-registration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: pod-annotate-webhook
  labels:
    app: pod-annotate-webhook
    kind: mutator
webhooks:
  - name: pod-annotate-webhook.slok.dev
    sideEffects: None
    admissionReviewVersions: ["v1"]
    clientConfig:
      service:
        name: pod-annotate-webhook
        namespace: sandbox
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURzakNDQXBxZ0F3SUJBZ0lSQUxFNXgxY1gwQUR4N1pnZitSYXJMMnN3RFFZSktvWklodmNOQVFFTEJRQXcKTFRFVk1CTUdBMVVFQ2hNTVkyVnlkQzF0WVc1aFoyVnlNUlF3RWdZRFZRUURFd3RsZUdGdGNHeGxMbU52YlRBZQpGdzB5TkRFd016QXdNRFF4TURoYUZ3MHlOVEF4TWpnd01EUXhNRGhhTUMweEZUQVRCZ05WQkFvVERHTmxjblF0CmJXRnVZV2RsY2pFVU1CSUdBMVVFQXhNTFpYaGhiWEJzWlM1amIyMHdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUEKQTRJQkR3QXdnZ0VLQW9JQkFRRGlMd2FubU8zN3hWeGpMd0g4d1dmYzAzemoyNS9jQmMrVzBBWFBQTzJnTnViVAp6RjlZS2hwaEFp [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    matchConditions:
      - name: "exclude-imageswap"
        expression: '!(request.namespace == "sandbox")'
